[package]
name = "ragex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
regex-automata = "0.3.0"
regex-syntax = "0.7.3"
fuzzerang = { path = "../fuzzerang" }
rand = "0.8.5"
derive_builder = "0.12.0"
