[package]
name = "regenerator"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Fuzzer/RNG seeded generation of arbitrary regular expressions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
regex-automata = "0.3.0"
regex-syntax = "0.7.3"
fuzzerang = "0.1.2"
rand = "0.8.5"
derive_builder = "0.12.0"
